<resources>
    <string name="app_name">EpiDroid</string>

    <!-- Debug Thingy -->
    <string name="debug_output_login">OutputLogin : </string>
    <string name="debug_output_infos">OutputInfos : </string>
    <string name="debug_api_infos_done">ApiInfos Done</string>
    <string name="debug_api_susie_done">ApiSusie Done</string>


    <!-- Drawer Thingy -->
    <string name="drawer_home">Home</string>
    <string name="drawer_schedule">Schedule</string>
    <string name="drawer_trombi">Trombi</string>
    <string name="drawer_modules">Modules</string>
    <string name="drawer_projects">Projects</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Connect</string>
    <string name="error_invalid_email">This login is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="http_login">https://epitech-api.herokuapp.com/login</string>

    <!-- Related to request -->
    <string name="request_post">POST</string>
    <string name="request_get">GET</string>
    <string name="request_delete">DELETE</string>

    <!-- Related to nothing -->
    <string name="string_login">login</string>
    <string name="string_password">password</string>
    <string name="string_equal">=</string>
    <string name="string_esper">&amp;</string>
    <string name="string_empty"></string>
    <string name="string_api">API</string>
    <string name="title">Title</string>
    <string name="module">Module</string>
    <string name="lastname">Last Name</string>
    <string name="description">Description</string>
    <string name="year">2016</string>
    <string name="firstname">First Name</string>
    <string name="competence">Competence</string>
    <string name="inscription">Inscription</string>
    <string name="code">Code</string>
    <string name="grade">Grade</string>
    <string name="credits">Credits</string>
    <string name="gpa">GPA : 4.2</string>
    <string name="log">Log : 42</string>
    <string name="token">Enter your token</string>
    <string name="activity">Activity</string>
    <string name="activitytitle">Activity Title</string>
    <string name="begin_activity">Begin Activity : ?</string>
    <string name="end_activity">End Activity : ?</string>
    <string name="room">In room : ?</string>

    <!-- Strings related to planning -->
    <string name="title_activity_main">Accueil</string>
    <string name="http_planning">https://epitech-api.herokuapp.com/planning</string>
    <string name="start_date_format">start</string>
    <string name="end_date_format">end</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Related to info -->
    <string name="http_infos">https://epitech-api.herokuapp.com/infos</string>
    <string name="string_token">token</string>
    <string name="gpa_infos">GPA : </string>
    <string name="log_infos_start">Log :&#32;</string>
    <string name="log_infos_middle"> &lt; </string>

    <!-- Related to User -->
    <string name="http_user">https://epitech-api.herokuapp.com/user</string>
    <string name="string_user">user</string>

    <!-- Related to Modules -->
    <string name="http_modules">https://epitech-api.herokuapp.com/modules</string>

    <!-- Related to Module -->
    <string name="http_module">https://epitech-api.herokuapp.com/module</string>
    <string name="string_scolar_year">scolaryear</string>
    <string name="string_code_module">codemodule</string>
    <string name="string_code_instance">codeinstance</string>
    <string name="string_begin_module">Begin : </string>
    <string name="string_end_module">End : </string>
    <string name="string_end_register_module">End register : </string>
    <string name="string_unsub">Unsubscribe</string>
    <string name="string_sub">Subscribe</string>

    <!-- Related to Projects -->
    <string name="http_projects">https://epitech-api.herokuapp.com/projects</string>

    <!-- Related to Project -->
    <string name="http_project">https://epitech-api.herokuapp.com/project</string>
    <string name="string_code_acti">codeacti</string>

    <!-- Related to Susie -->
    <string name="http_susie">https://epitech-api.herokuapp.com/susie</string>
    <string name="string_susie">susie</string>
    <string name="string_id">id</string>
    <string name="string_id_calendar">id_calendar</string>
    <string name="alert_dialog_ok">OK</string>

    <!-- Related to validation token -->
    <string name="http_token">https://epitech-api.herokuapp.com/token</string>
    <string name="string_code_event">codeevent</string>
    <string name="string_token_validation_code">tokenvalidationcode</string>
    <string name="string_token_validated">tokenvalidationcode</string>
</resources>
