<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_event_24dp"
            android:title="@string/drawer_schedule" />
        <item
            android:id="@+id/nav_modules"
            android:icon="@drawable/ic_description_24dp"
            android:title="@string/drawer_modules" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_24dp"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/nav_trombi"
            android:icon="@drawable/ic_people_24dp"
            android:title="@string/drawer_trombi" />

    </group>


</menu>
